--- a/go/burnin-rubber-crash-n-burn.html
+++ b/go/burnin-rubber-crash-n-burn.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
 
-<head>
+<head> 
 
     <meta name="robots" content="noindex, follow" />
 
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/big-shot-boxing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/big-shot-boxing.png">
+                            <img src="https://sudoku-online.github.io/img/big-shot-boxing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/jumping-shell.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/jumping-shell.png">
+                            <img src="https://sudoku-online.github.io/img/jumping-shell.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/friday-night-funkin.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/friday-night-funkin.png">
+                            <img src="https://sudoku-online.github.io/img/friday-night-funkin.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/raft-wars.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/raft-wars.png">
+                            <img src="https://sudoku-online.github.io/img/raft-wars.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiger-simulator-3d.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiger-simulator-3d.png">
+                            <img src="https://sudoku-online.github.io/img/tiger-simulator-3d.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/g-switch-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/g-switch-3.png">
+                            <img src="https://sudoku-online.github.io/img/g-switch-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stickman-hook.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stickman-hook.png">
+                            <img src="https://sudoku-online.github.io/img/stickman-hook.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/moto-x3m.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/moto-x3m.png">
+                            <img src="https://sudoku-online.github.io/img/moto-x3m.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/short-ride.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/short-ride.png">
+                            <img src="https://sudoku-online.github.io/img/short-ride.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/football-masters.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/football-masters.png">
+                            <img src="https://sudoku-online.github.io/img/football-masters.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/brain-test-tricky-puzzles.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/brain-test-tricky-puzzles.png">
+                            <img src="https://sudoku-online.github.io/img/brain-test-tricky-puzzles.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/unicycle-hero.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/unicycle-hero.png">
+                            <img src="https://sudoku-online.github.io/img/unicycle-hero.png">
                             <div class="product-badge">       
                             </div>
                         </div>
